--- a/download/index.html
+++ b/download/index.html
@@ -205,32 +205,32 @@ Nhấn nút phải của chuột và chọn chép về để dùng.
 <tr>
 <td><a href="KTTC1.pdf" target='_blank'>KTTC1.pdf</a></td>
 <td>Bài 1. Số ra ngày Thứ Hai 25/7/2011</td>
-<td>56KB</td>
+<td>56 KB</td>
 </tr>
 <tr>
 <td><a href="KTTC2.pdf" target='_blank'>KTTC2.pdf</a></td>
 <td>Bài 2. Số ra ngày Thứ Hai 1/8/2011</td>
-<td>170KB</td>
+<td>170 KB</td>
 </tr>
 <tr>
 <td><a href="KTTC3.pdf" target='_blank'>KTTC3.pdf</a></td>
 <td>Bài 3. Số ra ngày Thứ Hai 8/8/2011</td>
-<td>137KB</td>
+<td>137 KB</td>
 </tr>
 <tr>
 <td><a href="KTTC4.pdf" target='_blank'>KTTC4.pdf</a></td>
 <td>Bài 4. Số ra ngày Thứ Hai 15/8/2011</td>
-<td>77KB</td>
+<td>77 KB</td>
 </tr>
 <tr>
 <td><a href="KTTC5.pdf" target='_blank'>KTTC5.pdf</a></td>
 <td>Bài 5. Số ra ngày Thứ Hai 22/8/2011</td>
-<td>60KB</td>
+<td>60 KB</td>
 </tr>
 <tr>
 <td><a href="KTTC6.pdf" target='_blank'>KTTC6.pdf</a></td>
 <td>Bài 6. Số ra ngày Thứ Hai 29/8/2011</td>
-<td>61KB</td>
+<td>61 KB</td>
 </tr>
 <tr>
 <td colspan='3'>Những file tìm được trong Internet</td>
@@ -238,22 +238,22 @@ Nhấn nút phải của chuột và chọn chép về để dùng.
 <tr>
 <td><a href="DướiChânThầy.pdf" target='_blank'>DướiChânThầy.pdf</a></td>
 <td>Quyển sách nhỏ chỉ cách làm người tốt</td>
-<td>277KB</td>
+<td>277 KB</td>
 </tr>
 <tr>
 <td><a href="vnsl.zip" target='_blank'>vnsl.zip</a></td>
 <td>Sách Việt Nam sử lược của Trần Trọng Kim</td>
-<td>396KB</td>
+<td>396 KB</td>
 </tr>
 <tr>
 <td><a href="TruyenKieu.zip" target='_blank'>TruyenKieu.zip</a></td>
 <td>Truyện Kiều của Nguyễn Du</td>
-<td>169KB</td>
+<td>169 KB</td>
 </tr>
 <tr>
 <td><a href="Tam Hon Cao Thuong - Edmond De Amicis.epub" target='_blank'>Tâm hồn cao thượng</a></td>
 <td>Tâm hồn cao thượng epub</td>
-<td>213KB</td>
+<td>213 KB</td>
 </tr>
 <tr>
 <td><a href="http://download.lhboi.name.vn/VNTD-KTTD/" target='_blank'>Việt Nam Tự Điển</a></td>
@@ -276,9 +276,10 @@ Nhấn nút phải của chuột và chọn chép về để dùng.
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -307,6 +308,7 @@ Nhấn nút phải của chuột và chọn chép về để dùng.
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
