--- a/kinh-nghiem/may-tinh/RCS.html
+++ b/kinh-nghiem/may-tinh/RCS.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Nhắn tin miễn phí với RCS</title>
-<meta name="description" content="Nhắn tin miễn phí với RCS, những ưu điểm của RCS, cách cài đặt vào máy." />
+<title>Nhắn-tin miễn-phí bằng RCS</title>
+<meta name="description" content="Nhắn-tin miễn-phí bằng RCS, những ưu-điểm của RCS, cách cài-đặt vào máy." />
 <meta name="keywords" content="RCS, SMS, Android, Google, file">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/RCS">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/RCS">
@@ -225,27 +225,27 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
-  <h1>Nhắn tin miễn phí với RCS</h1>
+  <h1>Nhắn-tin miễn-phí bằng RCS</h1>
 <div class="right">Viết lần đầu trong Tháng Tư, 2021.</div>
-<p>Bây giờ người dùng đã quá quen thuộc với các <a href="OTT-apps">app dùng để liên lạc miễn phí qua Internet</a> rồi, giới thiệu thêm một app nữa thì sẽ có ít người quan tâm. Bài viết này sẽ nêu lên những ưu điểm của RCS so với các app kia để mọi người có thêm sự lựa chọn.</p>
+<p>Bây-giờ người-dùng đã quá quen-thuộc với các <a href="OTT-apps">app dùng để liên-lạc miễn-phí qua Internet</a> rồi, giới-thiệu thêm một app nữa thì sẽ có ít người quan-tâm. Bài này sẽ nêu lên những ưu-điểm của RCS so với các app kia để mọi-người có thêm sự lựa-chọn.</p>
 <h2>RCS là gì?</h2>
-<p>RCS (Rich Communication Services) là dịch vụ nhắn tin được GSMA (Hiệp hội GSM) thiết kế để thay thế SMS và MMS. Ngoài những dòng chữ, RCS gửi được nhiều thứ khác: file, hình, âm thanh, contact, toạ độ… RCS còn cho chat theo group.</p>
-<p>Đáng lẽ  việc cung cấp dịch vụ RCS thuộc về các nhà mạng di động giống như SMS (và thu phí trên mỗi tin nhắn như SMS, MMS), nhưng các mạng di động đã rất chậm chạp trong việc triển khai RCS; và Google nhảy vào cung cấp dịch vụ RCS qua Internet <b>hoàn toàn miễn phí</b> khi dùng sóng Wi-fi (chỉ tốn cước mobile data khi không có Wi-fi). Google gọi dịch vụ RCS là <b>Chat</b>. Dịch vụ RCS này chỉ có trên Android. Trên iOS đã có dịch vụ iMessage với những tính năng tương tự nhưng hai bên không trao đổi với nhau; Apple đang cân nhắc đưa RCS vào iOS.</p>
-<h2>Ưu điểm của RCS</h2>
-<h3>Những ưu điểm giống như các app khác</h3>
+<p>RCS (Rich Communication Services) là dịch-vụ nhắn-tin được GSMA (Hiệp-hội GSM) thiết-kế để thay-thế SMS và MMS. Ngoài những dòng chữ, RCS gửi được nhiều thứ khác: file, hình, âm-thanh, contact, toạ-độ… RCS còn cho chat theo group.</p>
+<p>Đáng-lẽ  việc cung-cấp dịch-vụ RCS thuộc về các công-ty cung-cấp dịch-vụ thông-tin di-động giống như SMS (và thu phí trên mỗi tin-nhắn như SMS, MMS), nhưng các mạng-di-động đã rất chậm-chạp trong việc triển-khai RCS; và Google nhảy vào cung-cấp dịch-vụ RCS qua Internet <b>hoàn-toàn miễn-phí</b> khi dùng sóng Wi-fi (chỉ tốn cước mobile data khi không có Wi-fi). Google gọi dịch-vụ RCS là <b>Chat</b>. Dịch-vụ RCS này chỉ có trên Android. Trên iOS đã có dịch-vụ iMessage với những tính-năng tương-tự nhưng hai bên không trao-đổi với nhau; Apple đang cân-nhắc đưa RCS vào iOS.</p>
+<h2>Ưu-điểm của RCS</h2>
+<h3>Những ưu-điểm giống như các app khác</h3>
 <ul>
-<li>miễn phí</li>
+<li>miễn-phí</li>
 <li>gửi file</li>
-<li>gửi khắp thế giới</li>
+<li>gửi khắp thế-giới</li>
 </ul>
 <h3>Không cần cài thêm app</h3>
 Bạn chỉ cần dùng app Messages của Google để gửi SMS, MMS, RCS. Không cần thêm app khác.
 <h3>Không cần tạo account</h3>
 Bạn không cần phải ghi nhớ thêm username và password.
 <h3>Không sợ bị hack</h3>
-Vì không có username và password nên bạn không sợ bị hack qua web. Tuy nhiên vẫn còn rủi ro bị lừa mất số điện thoại.
-<h3>Các tính năng tích hợp trong app</h3>
-Ngoài gửi file, app còn tích hợp tính năng để lấy những thông tin thường dùng gắn vào tin nhắn.
+Vì không có username và password nên bạn không sợ bị hack qua web. Tuy-nhiên vẫn còn rủi-ro bị lừa mất số điện-thoại.
+<h3>Các tính-năng tích-hợp trong app</h3>
+Ngoài gửi file, app còn tích-hợp tính-năng để lấy những thông-tin thường-dùng gắn vào tin-nhắn.
 <h2>Cài đặt RCS</h2>
 <h3>Cài app Messages của Google</h3>
 Cài app từ <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.messaging" target='_blank'>Play Store</a>.
@@ -260,26 +260,26 @@ Mở app Messages của Google,
 <br>Bật Enable chat features lên.
 <br>Vậy là bạn đã sẵn sàng dùng RCS.
 <h2>Dùng RCS</h2>
-<div class="flright"><amp-img alt="Chat RCS" src="/images/RCS.png" width="1077" height="282" layout="responsive"></amp-img></div>Trong app Messages, bạn chọn <b>Start chat</b> để bắt đầu soạn tin,
-<br>Gõ số điện thoại hoặc tên người trong Contacts vào dòng To, để tạo một nhóm chat có hơn hai người thì bấm vào hình người có dấu + ở cuối dòng To rồi lần lượt thêm số điện thoại hoặc tên người,
-<br>Ô gõ nội dung tin nhắn ở dưới đáy màn hình sẽ cho biết bên nhận tin có dùng RCS hay không. Nếu trong ô đó có chữ Chat tức là tất cả những số điện thoại nhận tin đều có dùng RCS. Nếu trong ô đó có chữ Text tức là có ít nhất một số điện thoại nhận tin không dùng RCS, bạn nên mời người dùng số điện thoại đó dùng RCS để có được những ưu điểm kể trên.
-<br>Bạn có thể soạn tin RCS dài hơn SMS rất nhiều, không hạn chế số chữ.
-<br>Trong app Messages có tích hợp sẵn các tính năng để gắn thêm vào tin nhắn:
+<div class="flright"><amp-img alt="Chat RCS" src="/images/RCS.png" width="1077" height="282" layout="responsive"></amp-img></div>Trong app Messages, bạn chọn <b>Start chat</b> để bắt-đầu soạn tin,
+<br>Gõ số-điện-thoại hoặc tên người trong Contacts vào dòng To, để tạo một nhóm chat có hơn hai người thì bấm vào hình người có dấu + ở cuối dòng To rồi lần-lượt thêm số-điện-thoại hoặc tên người,
+<br>Ô gõ nội-dung tin nhắn ở dưới đáy màn-hình sẽ cho biết bên-nhận-tin có dùng RCS hay không. Nếu trong ô đó có chữ Chat tức là tất-cả những số-điện-thoại nhận-tin đều có dùng RCS. Nếu trong ô đó có chữ Text tức là có ít-nhất-một số-điện-thoại nhận-tin không dùng RCS, bạn nên mời người dùng số điện thoại đó dùng RCS để có được những ưu-điểm kể trên.
+<br>Bạn có thể soạn tin RCS dài hơn SMS rất nhiều, không hạn-chế số chữ.
+<br>Trong app Messages có tích-hợp sẵn các tính-năng để gắn thêm vào tin-nhắn:
 <ul>
 <li>hình chụp ngay qua camera</li>
-<li>các emoticon và các hình GIF theo các chủ đề khác nhau</li>
-<li>toạ độ hiện thời của máy</li>
-<li>tình hình thời tiết</li>
-<li>các quán ăn, rạp chiếu phim quanh đó</li>
-<li>thông tin về một người trong Contact</li>
+<li>các emoticon và các hình GIF theo các chủ-đề khác nhau</li>
+<li>toạ-độ hiện-thời của máy</li>
+<li>tình-hình thời-tiết</li>
+<li>các quán-ăn, rạp-chiếu-phim quanh đó</li>
+<li>thông-tin về một người trong Contact</li>
 <li>file</li>
 </ul>
-Nếu bạn gửi tin nhắn chat đến một nhóm người thì tin nhắn trả lời của từng người đều đến cả nhóm, rất thuận tiện cho trao đổi chung trong nhóm. 
-<h2>RCS thiếu tính năng voice chat</h2>
-Hầu hết các app gửi tin nhắn qua Internet khác đều có luôn tính năng voice chat hoặc gửi voice mail. Messages của Google không có tính năng voice. Để voice chat bạn cần dùng Google Duo. Khi cài Google Duo vào cùng với Messages thì trong app Messages sẽ có các icon để voice và video chat.
+Nếu bạn gửi tin-nhắn chat đến một nhóm-người thì tin-nhắn trả-lời của từng người đều đến cả nhóm, rất thuận-tiện cho trao-đổi chung trong nhóm. 
+<h2>RCS thiếu tính-năng voice chat</h2>
+Hầu-hết các app gửi tin nhắn qua Internet khác đều có luôn tính-năng voice chat hoặc gửi voice mail. Messages của Google không có tính-năng voice. Để voice chat bạn cần dùng Google Duo. Khi cài Google Duo vào cùng với Messages thì trong app Messages sẽ có các icon để voice và video chat.
   <div class="todiscuss">
-  Các bài liên quan:
-  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
+  Các bài liên-quan:
+  <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh-nghiệm khác</a>
   </div>
   <hr>
   <div class="footer">
@@ -294,7 +294,7 @@ Hầu hết các app gửi tin nhắn qua Internet khác đều có luôn tính 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
 
