--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -265,7 +265,8 @@ Những điều dưới đây cũng có thể đúng với smartphone iOS.
 <dl>
 <dt>NÊN ghi thông tin cấp cứu của bạn vào mục <i>Emergency information</i> trong <i>Settings</i></dt>
 <dd><div class="flright"><amp-img alt="Emergency information" src="/images/emergency.jpg" width="1077" height="1710" layout="responsive"></amp-img></div>
-Thông tin cấp cứu gồm có tên, địa chỉ, nhóm máu, các chất dị ứng, các bệnh mãn tính, số điện thoại của những người thân nhất. Khi bạn bị bất tỉnh nơi công cộng, được người lạ đưa đi cấp cứu, nhân viên y tế có thể đọc được những thông tin cấp cứu đó bằng cách bấm vào chữ Emergency trong màn hình máy đang bị khoá. Với những thông tin đó, việc cấp cứu sẽ nhanh hơn.
+Thông tin cấp cứu gồm có tên, địa chỉ, nhóm máu, các chất dị ứng, các bệnh mãn tính, số điện thoại của những người thân nhất, có <a href="https://safechat.com/post/2898376295060271735" target='_blank'>đăng ký hiến tạng</a> hay không.
+<br>Khi bạn bị bất tỉnh nơi công cộng, được người lạ đưa đi cấp cứu, nhân viên y tế có thể đọc được những thông tin cấp cứu đó bằng cách bấm vào chữ Emergency trong màn hình máy đang bị khoá. Với những thông tin đó, việc cấp cứu sẽ nhanh hơn.
 <br>Khi bạn gặp một người đang bất tỉnh, bạn cũng NÊN thử tìm thông tin cấp cứu trong smartphone của người đó và gọi cho người thân của người đó.</dd>
 <dt>KHÔNG NÊN tắt các app đã dùng xong</dt>
 <dd>Các app đã dùng xong vẫn xuất hiện khi bạn chọn chức năng chuyển màn hình giữa các app, sự xuất hiện đó có hơi làm rối mắt bạn. Tuy nhiên những app đó không thật sự chạy và không làm hao pin hay hao lưu lượng Internet, bạn không cần tắt chúng. Đó là nhờ sự kiểm soát của hệ điều hành Android. Ngược lại, nếu bạn tắt chúng thì bạn có thể bị hao pin hơn khi bạn cần dùng app đó lần nữa vì Android phải đọc lại app đó từ flash storage vào RAM.</dd>
@@ -383,7 +384,7 @@ Các bài liên quan:
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
   <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
-  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
 
