--- a/kinh-nghiem/may-tinh/protect.html
+++ b/kinh-nghiem/may-tinh/protect.html
@@ -229,14 +229,14 @@ data-ad-slot="5275186684">
 <div class="right">Viết lần đầu trong Tháng Ba, 2020. Sửa lần cuối trong Tháng Mười Một, 2021.</div>
 Dàn bài:
 <ul>
-<li><a href="#taisanso">Tài sản trong thời đại số hoá có gì khác?</a></li>
+<li><a href="#taisanso">Tài sản trong thời đại số hoá có những rủi ro gì khác?</a></li>
 <li><a href="#password">Bảo vệ password</a></li>
 <li><a href="#twofactor">Bảo vệ hai lớp (Two Factor Authentication)</a></li>
 <li><a href="#dsign">Digital Signing</a></li>
 <li><a href="#disanso">Di sản số</a></li>
 <li><a href="#bank">Tài khoản ở ngân hàng</a></li>
 </ul>
-<h2 id="taisanso">Tài sản trong thời đại số hoá có gì khác?</h2>
+<h2 id="taisanso">Tài sản trong thời đại số hoá có những rủi ro gì khác?</h2>
 <p>Thời nay đa số người ta đều có một thứ tài sản đặc biệt cần giữ là các file: file hình/video chụp bằng camera/phone, file nhạc để nghe bằng phone/computer, tài liệu soạn ra khi làm việc và ghi chép cá nhân… Mặc dù cách dùng các file đó khác nhau nhưng bên trong mỗi file chỉ chứa toàn các số 0 và 1 cho nên chúng ta gọi đó là <b>tài sản số hoá</b>. Những tài sản số hoá đều có một giá trị vật chất hoặc tinh thần nào đó. Chúng có giá trị vật chất khi chúng ta có thể bán, cho thuê, ví dụ như bán những tấm hình đẹp, cho người ta xem những video clip để thu tiền quảng cáo… Một vài loại tài sản số hoá có giá trị vật chất rất cụ thể là tài khoản ngân hàng, ví điện tử, giá trị của những tài sản này bằng số tiền có trong tài-khoản hoặc ví.
 <br>Những tài sản số hoá đó được tạo ra và giữ trong thẻ nhớ, USB drive, ổ đĩa cứng, smartphone… và chúng rất dễ bị mất đi vì vật chứa bị mất hay hư bất ngờ hoặc người chủ lỡ tay xoá mất.</p>
 <p>Ngoài ra, ngày càng có nhiều file do chúng ta tạo ra nhưng không được giữ trong tay chúng ta mà nằm trong các cloud server của các nhà cung cấp dịch vụ như Google, Facebook, Dropbox… Chúng ta giữ những file đó bằng password, mất password là mất hết file. Password giống như một cái chìa khoá để mở cái tủ chứa tài sản số hoá.</p>
