--- a/kinh-nghiem/may-tinh/protect.html
+++ b/kinh-nghiem/may-tinh/protect.html
@@ -257,7 +257,7 @@ Dàn bài:
 </ul>
 <h3>Trường hợp khác</h3>
 <p>Một trường hợp bị lộ file riêng tư một cách không ngờ đó là giao máy tính hoặc smartphone bị hư cho thợ sửa và thợ đọc được những file trong đó. Để tránh bị như vậy, bạn hãy yêu cầu thợ gỡ đĩa cứng, thẻ nhớ đưa lại cho bạn trước khi bạn rời khỏi cửa hàng.
-<br>Và bạn luôn luôn nhớ đừng để những file riêng tư không được bảo vệ bằng password trong smartphone. Ví dụ không ghi mật khẩu vào file text hoặc vào các app không có password, không chụp hình mật khẩu, hoặc những hình riêng tư… Nếu bạn lỡ để những thứ không được bảo vệ trong smartphone và bạn đánh giá rằng việc lộ những thứ đó sẽ gây thiệt hại và rắc rối lớn thì bạn nên cân nhắc vứt bỏ smartphone bị hư thay vì đưa cho thợ sửa.</p>
+<br>Smartphone đã có sẵn tính năng mã hoá các file ghi vào bộ nhớ của nó. Trước khi dùng máy mới, bạn cần xem lại xem tính năng đó có bật lên chưa. Với tính năng đó thì thợ sửa smartphone sẽ không thấy được những file trong máy nếu không có password để login. Và bạn luôn luôn nhớ đừng giao password để thợ thử máy trong khi sửa. Thay vì giao password, bạn hãy đồng ý để thợ factory reset smartphone của bạn. Thà mất hết file còn hơn để lộ những file riêng tư.</p>
 
 <h2 id="password">Bảo vệ password</h2>
 <p>Bây giờ có quá nhiều dịch vụ được cung cấp (miễn phí hoặc có thu phí) qua Internet. Để sử dụng dịch vụ thì chúng ta phải được server xác thực bằng cách trả lời password. Dùng máy tính và smartphone cá nhân cũng cần password. Một số file đặc biệt quan trọng trong máy cá nhân cũng cần password riêng để mở.</p>
