--- a/kinh-nghiem/linh-tinh/nutrition.html
+++ b/kinh-nghiem/linh-tinh/nutrition.html
@@ -4,7 +4,7 @@
 <title>Dinh dưỡng, vận động và kiểm soát  sức khoẻ</title>
 <meta name="description" content="Dinh dưỡng, vận động và kiểm soát  sức khoẻ" />
 <meta name="keywords" content="giá trị, dinh dưỡng, vận động, thực phẩm, sữa, bánh, bơ, mứt">
-<link rel="canonical" href="https://lehboi.github.io/">
+<link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/nutrition">
 
 <!-- in head of html file -->
 <meta charset='utf-8'>
