--- a/kinh-nghiem/linh-tinh/index.html
+++ b/kinh-nghiem/linh-tinh/index.html
@@ -192,6 +192,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dt><a href='/kinh-nghiem/linh-tinh/ac-dc'>Điện một chiều và điện xoay chiều</a></dt>
   <dt><a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a></dt>
   <dt><a href='/kinh-nghiem/linh-tinh/dien-standby'>Điện standby tốn bao nhiêu?</a></dt>
+  <dt><a href='/kinh-nghiem/linh-tinh/nutrition'>Dinh dưỡng, vận động và kiểm soát sức khoẻ</a></dt>
   <dt><a href='/kinh-nghiem/linh-tinh/magchan'>Dùng thử Magchan để giặt</a></dt>
   <dt><a href='/kinh-nghiem/linh-tinh/may-lanh'>Hiểu rõ Máy lạnh</a></dt>
   <dt><a href='/kinh-nghiem/linh-tinh/nong'>Bàn về tình trạng nóng</a></dt>
