--- a/kinh-nghiem/linh-tinh/nutrition.html
+++ b/kinh-nghiem/linh-tinh/nutrition.html
@@ -263,6 +263,11 @@ Bạn có thể download <a href="http://chuyentrang.viendinhduong.vn/FileUpload
 http://viendinhduong.vn/FileUpload/Documents/TLTT%20BKLN/(16)%20Banh%20hap%20luoc.PDF
 http://viendinhduong.vn/FileUpload/Documents/TLTT%20BKLN/(21)%20Xoi.PDF
 -->
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh-nghiệm khác</a>
+</div>
+
   <hr>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
